--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,3 @@
 <strong><%= @student.name %></strong>
+<%= link_to "Edit", edit_student_path(@student) %>
+<%= link_to "Delete", student_path(@student), method: "delete" %>
