--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= link_to "Students", students_path %>
+    <%= link_to "Create New Student", new_student_path %>
     <%= yield %>
   </body>
 </html>
